--- a/index.htm
+++ b/index.htm
@@ -41,6 +41,9 @@ under GPL license
 	  }
 	  .thumbnail{
 		position:relative;
+		border: 0;
+		box-shadow: none;
+		-webkit-box-shadow: none;
 	  }
 	  
 	  img.desaturate { -webkit-filter: grayscale(90%);
@@ -115,7 +118,7 @@ under GPL license
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Project name</a>
+          <a class="brand" href="#">Portfolio</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -146,7 +149,7 @@ under GPL license
 		<div class="container">
 			<div class="row">
 				<div class="span12">
-					<h1>huuloooluuulooluuloolu</h1>
+					<h1>hololololo</h1>
 				</div>
 			</div>
 		</div>
